# Transformer_from_Scratch_Pytorch

./: README.md  pyproject.toml
transformer_from_scratch/: config.yaml  data_loader.py  english-french.csv  model.py  training.py
